# AlgoTradingStrategies

./: .gitignore  ARCHITECTURE.md  EXECUTION_PLAN.md  Features.md  PORTFOLIO_IMPLEMENTATION.md  README.md  backtest.py  fix_protobuf_imports.py  fix_protobuf_imports_v2.py  pyproject.toml  pytest.ini  requirements.txt  results_AAPL_ml_2025-01-01_2025-03-31.csv  run_manager.py  setup.py  test_strategy.py
.cursor/: rules.json
.cursor/rules/: architecture.mdc  test_after_codegen.mdc
.github/workflows/: ci-cd.yml  main.yml  test.yml
data/: README.md  __init__.py  data_fetcher.py  data_manager.py  feature_engineering.py  feature_store_manager.py  indicators.py
docs/: RITHMIC_PROVIDER.md  order_flow_integration.md
examples/: rithmic_provider_example.py
helpers/: __init__.py  logger.py  run_manager.py
scripts/: __init__.py  backtest.py  compare_results.py  run_strategy.py  run_tests.py
src/: __init__.py  run_trading_system.py
tests/: __init__.py  conftest.py  test_basic.py  test_cache_metadata.py  test_data_cache.py  test_data_features.py  test_data_manager.py  test_feature_store.py  test_integration_feature_store.py  test_polygon_key.py  test_polygon_provider.py  test_polygon_provider_retry.py  test_portfolio_manager.py  test_portfolio_trading_execution_config_factory.py  test_portfolio_visualizer.py  test_retry_utils.py  test_rithmic_provider.py  test_signal_aggregation.py  test_smart_cache.py  test_strategies.py  test_strategy_manager.py  test_strategy_registry.py  test_strategy_registry_config.py  test_trade_decider.py  test_trading_system.py
(+256 files in other folders)
